# dotfiles

./: .gitignore  AGENTS.md  Brewfile  CLAUDE.md  Makefile  README.md  SECURITY.md  backup-cisco  backup-ex3300  badnodes  badpods  biggest-files.sh  brew-backup  cargo-coverage  cargo-sweep  cargo-sweep-launchd-install.sh  cargo-sweep.plist  cargo-timings  cleanup  clippy  codex-dependabot-python.sh  codex-dependabot-rust.sh  codex-fix-pr.sh  codex-local  codex-openrouter  codex-use-uv.sh  configure-dependency-aging.py  copy-fail-CVE-2026-31431.py  default-python-packages  dependabot_group_updates.py  direnvrc  dns-cache-clear  docker-ghcr-login  docker-pull-latest-ish.py  docker-rust-here  docker_create_manifest_list.py  duti-readme.md  duti-set  find-big-targets  find-curl-update-path.sh  (+65 more)
.github/: CONTRIBUTING.md
.github/workflows/: mypy.yml  pylint.yml  pytest.yml
cloud-init/factorio/: factorio.yml  server-adminlist.json  server-settings.json  startup.sh
cloud-init/factorio/mods/: mod-list.json
codex-pets/maltilda/: pet.json
codex-pets/maltilda-v2/: imagegen-jobs.json  pet_request.json
codex-pets/maltilda-v2/final/: validation-extended.json  validation-installed.json
codex-pets/maltilda-v2/prompts/: base-pet.md  look-cardinals.md
codex-pets/maltilda-v2/qa/: blind-review-resolution.json  cardinal-anchors.json  chroma-despill-extended.json  direction-blind-answer-key.json  direction-blind-validation.json  direction-blind-verdicts-1.json  direction-blind-verdicts-2.json  direction-blind-verdicts-3.json  direction-blind-verdicts.json  direction-semantics.json  look-continuity.json  look-mechanics.md  look-row-9-registration.json  original-validation.json  review.json  run-summary.json
dotfiles/: __init__.py  diffstr.py  git_file_ref.py  sbs_dlp.py
duti/: bambu-files  duti-defaults
opencode_service/: com.opencode.plist
random/: k8s-detect-nodes-proxy-get.sh
tests/: test_dependabot_group_updates.py  test_diffstr.py  test_sbs_dlp.py  test_trade_tools_watcher.py
tests/fixtures/sbs_dlp/: catch_22.json  once_upon_a_time_in_space.json  shoresy.json
timemachine_files/: TimeMachineEject.plist  update_plist.sh
yara/: .gitignore  mise.toml  polinrider.yar
(+26 files in other folders)
