[project]
name = "dotfiles"
version = "0.1.0"
description = "My random stuff"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "kokoro>=0.9.4",
    "loguru>=0.7.3",
    "numpy>=2.4.4",
    "pycryptodome>=3.23.0",
    "pydantic>=2.12.5",
    "pypdf2>=3.0.1",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "ty>=0.0.29",
    "types-requests>=2.32.0.20250515",
]
