[project]
name = "dotfiles"
version = "0.1.0"
description = "My random stuff"
authors = [{ name = "James Hodgkinson", email = "james@terminaloutcomes.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "loguru>=0.7.3",
    "pycryptodome>=3.23.0",
    "pydantic>=2.13.0",
    "pypdf2>=3.0.1",
    "requests>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
    "ty>=0.0.31",
    "types-requests>=2.32.0.20250515",
]

kokoro = [
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
    "numpy>=2.4.4",
    "misaki[en]>=0.9.4",
]

[project.scripts]
sbs-dlp = "dotfiles.sbs_dlp:main"
